# winwin-cli

./: .gitignore  CLAUDE.md  LICENSE  README.md  knowledge-bases.yaml  pyproject.toml
.github/workflows/: python-publish.yml
scripts/: release.sh
skills/: README.md
skills/code-review/: SKILL.md
skills/code-review/assets/: checklist.md
skills/git-workflow/: SKILL.md
skills/git-workflow/assets/: pr-template.md
skills/git-workflow/scripts/: install.sh
src/winwin_cli/: __init__.py  cli.py  convert.py
src/winwin_cli/kb_search/: __init__.py  cli.py  config.py  indexer.py  markitdown.py  models.py  search.py
src/winwin_cli/kb_search/commands/: README.md  __init__.py  add.py  disable.py  enable.py  index.py  info.py  list.py  remove.py  search.py  status.py
src/winwin_cli/skills/: __init__.py  cli.py
src/winwin_cli/skills/winwin-cli/: SKILL.md  __init__.py
src/winwin_cli/skills/winwin-cli/convert/: SKILL.md  examples.json
src/winwin_cli/skills/winwin-cli/kb-search/: SKILL.md  examples.json
src/winwin_cli/skills/winwin-cli/skills/: SKILL.md  examples.json
src/winwin_cli/skills/winwin-cli/web-search/: SKILL.md  examples.json
src/winwin_cli/web_search/: __init__.py  cli.py  providers.py
tests/: conftest.py  test_convert.py  test_kb_search_cli.py  test_kb_search_config.py  test_kb_search_indexer.py  test_kb_search_search.py  test_skills.py  test_web_search.py
